src/objects/Field_Officer__c.object
<CustomObject>
    <description>Indonesia Field Officers</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field officer status</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Expiry_Date__c</fullName>
        <label>Contract Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FO_alias__c</fullName>
        <label>FO Alias</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FO_profile__c</fullName>
        <label>FO Profile</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Join_Date__c</fullName>
        <label>Join Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>Person details</description>
        <label>Person ID</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Field Officers</relationshipLabel>
        <relationshipName>Field_Officers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Field Officer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FO_View</fullName>
        <columns>NAME</columns>
        <columns>FO_alias__c</columns>
        <columns>Join_Date__c</columns>
        <columns>Contract_Expiry_Date__c</columns>
        <columns>Person__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>FO View</label>
    </listViews>
    <nameField>
        <label>FO_ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Officers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>